tests/semantic/pass/doubleGlobalDeclaration.c
// this works in clang and gcc
int a;
int a;

int main() {
}
