tests/semantic/fail/scopes-fail.c
int main() {
  int a;
  char a; // a has been already declared
}
